Add question update functionality - mostly stable
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -47,4 +47,8 @@
       <param-name>email_ses_region</param-name>
       <param-value>us-east-1</param-value>
   </context-param>
+  <context-param>
+      <param-name>notification_email</param-name>
+      <param-value>gary@sourceauditor.com</param-value>
+  </context-param>
 </web-app>
