--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,7 +33,7 @@
   </context-param>
   <context-param>
     <param-name>openchaindb_server</param-name>
-    <param-value>localhost</param-value>
+    <param-value>aa56xxru3cmnh3.cayqjuz29x2c.us-west-1.rds.amazonaws.com</param-value>
   </context-param>
   <context-param>
     <param-name>openchaindb_port</param-name>
