--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -41,11 +41,11 @@
   </context-param>
   <context-param>
       <param-name>return_email</param-name>
-      <param-value>no-reply@sourceauditor.com</param-value>
+      <param-value>no-reply@conformance.openchainproject.org</param-value>
   </context-param>
   <context-param>
       <param-name>email_ses_region</param-name>
-      <param-value>us-east-1</param-value>
+      <param-value>us-west-2</param-value>
   </context-param>
   <context-param>
       <param-name>notification_email</param-name>
