Fix links and emails for final release. Partial (not working) implementation of Yes/No/NotApplicable question types
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -49,6 +49,6 @@
   </context-param>
   <context-param>
       <param-name>notification_email</param-name>
-      <param-value>gary@sourceauditor.com</param-value>
+      <param-value>openchain-conformance@lists.linuxfoundation.org</param-value>
   </context-param>
 </web-app>
