--- a/resources/log4j2.properties
+++ b/resources/log4j2.properties
@@ -1,6 +1,6 @@
 status =INFO
 appenders = console, rolling
-property.logFileName = /var/log/openchain.log
+property.logFileName = /var/log/tomcat/openchain.log
 
 appender.console.type = Console
 appender.console.name = STDOUT
